# AeroCam

./: .gitignore  AeroCam.ld  CMakeLists.txt  README.md
.github/workflows/: aerocam-ci.yml
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h
build-F4/: CMakeCache.txt
build-tests/: CMakeCache.txt
cmake/: arm-gcc-toolchain.cmake
docs/: BRINGUP.md
include/: aerocam_stabilizer.hpp  drone_stabilizer.hpp  gimbal_mixer.hpp  icm20948_driver.hpp  mcu_hal.hpp  quaternion.hpp  spi_dma.hpp
src/: aerocam_stabilizer.cpp  drone_stabilizer.cpp  icm20948_driver.cpp  main.cpp  quaternion.cpp  startup_aerocam.s
